--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "honeycomb-client"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
 
@@ -10,6 +10,7 @@ authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
 anyhow = "1.0.79"
 chrono = { version = "0.4.31", features = ["serde"] }
 futures = "0.3.30"
+openssl = { version = "0.10.61", features = ["vendored"] }
 reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
