--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "honeycomb-client"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2021"
 authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.79"
-chrono = { version = "0.4.31", features = ["serde"] }
+anyhow = "1.0.80"
+chrono = { version = "0.4.34", features = ["serde"] }
 futures = "0.3.30"
-openssl = { version = "0.10.61", features = ["vendored"] }
-reqwest = { version = "0.11.23", features = ["json"] }
-serde = { version = "1.0.195", features = ["derive"] }
-serde_json = "1.0.111"
+indicatif = "0.17.8"
+openssl = { version = "0.10.64", features = ["vendored"] }
+reqwest = { version = "0.11.24", features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["full"] }
